parser.output
Terminals unused in grammar

   T_LESS
   T_LEQ


State 44 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: classes

    2 classes: classes class
    3        | class

    4 class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' members_methods '}'
    5      | T_IDENTIFIER '{' members_methods '}'

    6 members_methods: members
    7                | methods
    8                | members methods
    9                | %empty

   10 members: members member
   11        | member

   12 methods: methods method
   13        | method

   14 member: Type T_IDENTIFIER ';'

   15 Type: T_INTEGER
   16     | T_BOOL
   17     | T_IDENTIFIER

   18 method: T_IDENTIFIER '(' parameters ')' T_POINT ReturnType '{' Body returnStatement '}'

   19 ReturnType: T_BOOL
   20           | T_INTEGER
   21           | T_IDENTIFIER
   22           | T_NONE

   23 parameters: parameters ',' parameter
   24           | parameter
   25           | %empty

   26 parameter: Type T_IDENTIFIER

   27 Body: declarations statements returnStatement
   28     | declarations returnStatement
   29     | statements returnStatement
   30     | returnStatement

   31 declarations: declarations declaration
   32             | declaration

   33 declaration: Type identifiers ';'

   34 identifiers: identifiers ',' T_IDENTIFIER
   35            | T_IDENTIFIER

   36 returnStatement: T_RETURN Expression ';'
   37                | %empty

   38 statements: statements statement
   39           | statement

   40 statement: assignment
   41          | Method_call
   42          | if_else
   43          | while_loop
   44          | do_while_loop
   45          | print

   46 assignment: T_IDENTIFIER '=' Expression ';'
   47           | T_IDENTIFIER '.' T_IDENTIFIER '=' Expression ';'

   48 Method_call: method_call ';'

   49 if_else: T_IF Expression '{' Block '}'
   50        | T_IF Expression '{' Block '}' T_ELSE '{' Block '}'

   51 while_loop: T_WHILE Expression '{' Block '}'

   52 do_while_loop: T_DO '{' Block '}' T_WHILE '(' Expression ')' ';'

   53 Block: statements

   54 print: T_PRINT Expression ';'

   55 Expression: Expression T_PLUS Expression
   56           | Expression '-' Expression
   57           | Expression T_MULT Expression
   58           | Expression T_DIV Expression
   59           | Expression T_GREATER Expression
   60           | Expression T_GEQ Expression
   61           | Expression T_EQUALS Expression
   62           | Expression T_AND Expression
   63           | Expression T_OR Expression
   64           | T_NOT Expression
   65           | '-' Expression
   66           | T_IDENTIFIER
   67           | member_access
   68           | method_call
   69           | '(' Expression ')'
   70           | T_NUMBER
   71           | T_TRUE
   72           | T_FALSE
   73           | T_NEW T_IDENTIFIER
   74           | T_NEW T_IDENTIFIER '(' Arguments ')'

   75 member_access: T_IDENTIFIER '.' T_IDENTIFIER

   76 method_call: T_IDENTIFIER '(' Arguments ')'
   77            | T_IDENTIFIER '.' T_IDENTIFIER '(' Arguments ')'

   78 Arguments: Arguments_
   79          | %empty

   80 Arguments_: Arguments_ ',' Expression
   81           | Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 52 69 74 76 77
')' (41) 18 52 69 74 76 77
',' (44) 23 34 80
'-' (45) 56 65
'.' (46) 47 75 77
';' (59) 14 33 36 46 47 48 52 54
'=' (61) 46 47
'{' (123) 4 5 18 49 50 51 52
'}' (125) 4 5 18 49 50 51 52
error (256)
T_NUMBER (258) 70
T_IDENTIFIER (259) 4 5 14 17 18 21 26 34 35 46 47 66 73 74 75 76 77
T_GREATER (260) 59
T_GEQ (261) 60
T_LESS (262)
T_EQUALS (263) 61
T_LEQ (264)
T_PLUS (265) 55
T_MULT (266) 57
T_DIV (267) 58
T_OR (268) 63
T_AND (269) 62
T_NOT (270) 64
T_PRINT (271) 54
T_RETURN (272) 36
T_IF (273) 49 50
T_ELSE (274) 50
T_WHILE (275) 51 52
T_NEW (276) 73 74
T_INTEGER (277) 15 20
T_BOOL (278) 16 19
T_NONE (279) 22
T_TRUE (280) 71
T_FALSE (281) 72
T_EXTENDS (282) 4
T_DO (283) 52
T_POINT (284) 18
unaryminus (285)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Start (41)
    on left: 1, on right: 0
classes (42)
    on left: 2 3, on right: 1 2
class (43)
    on left: 4 5, on right: 2 3
members_methods (44)
    on left: 6 7 8 9, on right: 4 5
members (45)
    on left: 10 11, on right: 6 8 10
methods (46)
    on left: 12 13, on right: 7 8 12
member (47)
    on left: 14, on right: 10 11
Type (48)
    on left: 15 16 17, on right: 14 26 33
method (49)
    on left: 18, on right: 12 13
ReturnType (50)
    on left: 19 20 21 22, on right: 18
parameters (51)
    on left: 23 24 25, on right: 18 23
parameter (52)
    on left: 26, on right: 23 24
Body (53)
    on left: 27 28 29 30, on right: 18
declarations (54)
    on left: 31 32, on right: 27 28 31
declaration (55)
    on left: 33, on right: 31 32
identifiers (56)
    on left: 34 35, on right: 33 34
returnStatement (57)
    on left: 36 37, on right: 18 27 28 29 30
statements (58)
    on left: 38 39, on right: 27 29 38 53
statement (59)
    on left: 40 41 42 43 44 45, on right: 38 39
assignment (60)
    on left: 46 47, on right: 40
Method_call (61)
    on left: 48, on right: 41
if_else (62)
    on left: 49 50, on right: 42
while_loop (63)
    on left: 51, on right: 43
do_while_loop (64)
    on left: 52, on right: 44
Block (65)
    on left: 53, on right: 49 50 51 52
print (66)
    on left: 54, on right: 45
Expression (67)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74, on right: 36 46 47 49 50 51 52 54 55 56 57 58 59 60 61 62
    63 64 65 69 80 81
member_access (68)
    on left: 75, on right: 67
method_call (69)
    on left: 76 77, on right: 48 68
Arguments (70)
    on left: 78 79, on right: 74 76 77
Arguments_ (71)
    on left: 80 81, on right: 78 80


State 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start    go to state 2
    classes  go to state 3
    class    go to state 4


State 1

    4 class: T_IDENTIFIER . T_EXTENDS T_IDENTIFIER '{' members_methods '}'
    5      | T_IDENTIFIER . '{' members_methods '}'

    '{'        shift, and go to state 5
    T_EXTENDS  shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: classes .
    2 classes: classes . class

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    class  go to state 8


State 4

    3 classes: class .

    $default  reduce using rule 3 (classes)


State 5

    5 class: T_IDENTIFIER '{' . members_methods '}'

    T_IDENTIFIER  shift, and go to state 9
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11

    $default  reduce using rule 9 (members_methods)

    members_methods  go to state 12
    members          go to state 13
    methods          go to state 14
    member           go to state 15
    Type             go to state 16
    method           go to state 17


State 6

    4 class: T_IDENTIFIER T_EXTENDS . T_IDENTIFIER '{' members_methods '}'

    T_IDENTIFIER  shift, and go to state 18


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 classes: classes class .

    $default  reduce using rule 2 (classes)


State 9

   17 Type: T_IDENTIFIER .
   18 method: T_IDENTIFIER . '(' parameters ')' T_POINT ReturnType '{' Body returnStatement '}'

    '('  shift, and go to state 19

    $default  reduce using rule 17 (Type)


State 10

   15 Type: T_INTEGER .

    $default  reduce using rule 15 (Type)


State 11

   16 Type: T_BOOL .

    $default  reduce using rule 16 (Type)


State 12

    5 class: T_IDENTIFIER '{' members_methods . '}'

    '}'  shift, and go to state 20


State 13

    6 members_methods: members .
    8                | members . methods
   10 members: members . member

    T_IDENTIFIER  shift, and go to state 9
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11

    $default  reduce using rule 6 (members_methods)

    methods  go to state 21
    member   go to state 22
    Type     go to state 16
    method   go to state 17


State 14

    7 members_methods: methods .
   12 methods: methods . method

    T_IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 7 (members_methods)

    method  go to state 24


State 15

   11 members: member .

    $default  reduce using rule 11 (members)


State 16

   14 member: Type . T_IDENTIFIER ';'

    T_IDENTIFIER  shift, and go to state 25


State 17

   13 methods: method .

    $default  reduce using rule 13 (methods)


State 18

    4 class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER . '{' members_methods '}'

    '{'  shift, and go to state 26


State 19

   18 method: T_IDENTIFIER '(' . parameters ')' T_POINT ReturnType '{' Body returnStatement '}'

    T_IDENTIFIER  shift, and go to state 27
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11

    $default  reduce using rule 25 (parameters)

    Type        go to state 28
    parameters  go to state 29
    parameter   go to state 30


State 20

    5 class: T_IDENTIFIER '{' members_methods '}' .

    $default  reduce using rule 5 (class)


State 21

    8 members_methods: members methods .
   12 methods: methods . method

    T_IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 8 (members_methods)

    method  go to state 24


State 22

   10 members: members member .

    $default  reduce using rule 10 (members)


State 23

   18 method: T_IDENTIFIER . '(' parameters ')' T_POINT ReturnType '{' Body returnStatement '}'

    '('  shift, and go to state 19


State 24

   12 methods: methods method .

    $default  reduce using rule 12 (methods)


State 25

   14 member: Type T_IDENTIFIER . ';'

    ';'  shift, and go to state 31


State 26

    4 class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' . members_methods '}'

    T_IDENTIFIER  shift, and go to state 9
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11

    $default  reduce using rule 9 (members_methods)

    members_methods  go to state 32
    members          go to state 13
    methods          go to state 14
    member           go to state 15
    Type             go to state 16
    method           go to state 17


State 27

   17 Type: T_IDENTIFIER .

    $default  reduce using rule 17 (Type)


State 28

   26 parameter: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 33


State 29

   18 method: T_IDENTIFIER '(' parameters . ')' T_POINT ReturnType '{' Body returnStatement '}'
   23 parameters: parameters . ',' parameter

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 30

   24 parameters: parameter .

    $default  reduce using rule 24 (parameters)


State 31

   14 member: Type T_IDENTIFIER ';' .

    $default  reduce using rule 14 (member)


State 32

    4 class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' members_methods . '}'

    '}'  shift, and go to state 36


State 33

   26 parameter: Type T_IDENTIFIER .

    $default  reduce using rule 26 (parameter)


State 34

   18 method: T_IDENTIFIER '(' parameters ')' . T_POINT ReturnType '{' Body returnStatement '}'

    T_POINT  shift, and go to state 37


State 35

   23 parameters: parameters ',' . parameter

    T_IDENTIFIER  shift, and go to state 27
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11

    Type       go to state 28
    parameter  go to state 38


State 36

    4 class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' members_methods '}' .

    $default  reduce using rule 4 (class)


State 37

   18 method: T_IDENTIFIER '(' parameters ')' T_POINT . ReturnType '{' Body returnStatement '}'

    T_IDENTIFIER  shift, and go to state 39
    T_INTEGER     shift, and go to state 40
    T_BOOL        shift, and go to state 41
    T_NONE        shift, and go to state 42

    ReturnType  go to state 43


State 38

   23 parameters: parameters ',' parameter .

    $default  reduce using rule 23 (parameters)


State 39

   21 ReturnType: T_IDENTIFIER .

    $default  reduce using rule 21 (ReturnType)


State 40

   20 ReturnType: T_INTEGER .

    $default  reduce using rule 20 (ReturnType)


State 41

   19 ReturnType: T_BOOL .

    $default  reduce using rule 19 (ReturnType)


State 42

   22 ReturnType: T_NONE .

    $default  reduce using rule 22 (ReturnType)


State 43

   18 method: T_IDENTIFIER '(' parameters ')' T_POINT ReturnType . '{' Body returnStatement '}'

    '{'  shift, and go to state 44


State 44

   18 method: T_IDENTIFIER '(' parameters ')' T_POINT ReturnType '{' . Body returnStatement '}'

    T_IDENTIFIER  shift, and go to state 45
    T_PRINT       shift, and go to state 46
    T_RETURN      shift, and go to state 47
    T_IF          shift, and go to state 48
    T_WHILE       shift, and go to state 49
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_DO          shift, and go to state 50

    T_RETURN  [reduce using rule 37 (returnStatement)]
    $default  reduce using rule 37 (returnStatement)

    Type             go to state 51
    Body             go to state 52
    declarations     go to state 53
    declaration      go to state 54
    returnStatement  go to state 55
    statements       go to state 56
    statement        go to state 57
    assignment       go to state 58
    Method_call      go to state 59
    if_else          go to state 60
    while_loop       go to state 61
    do_while_loop    go to state 62
    print            go to state 63
    method_call      go to state 64


State 45

   17 Type: T_IDENTIFIER .
   46 assignment: T_IDENTIFIER . '=' Expression ';'
   47           | T_IDENTIFIER . '.' T_IDENTIFIER '=' Expression ';'
   76 method_call: T_IDENTIFIER . '(' Arguments ')'
   77            | T_IDENTIFIER . '.' T_IDENTIFIER '(' Arguments ')'

    '='  shift, and go to state 65
    '('  shift, and go to state 66
    '.'  shift, and go to state 67

    $default  reduce using rule 17 (Type)


State 46

   54 print: T_PRINT . Expression ';'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 76
    member_access  go to state 77
    method_call    go to state 78


State 47

   36 returnStatement: T_RETURN . Expression ';'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 79
    member_access  go to state 77
    method_call    go to state 78


State 48

   49 if_else: T_IF . Expression '{' Block '}'
   50        | T_IF . Expression '{' Block '}' T_ELSE '{' Block '}'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 80
    member_access  go to state 77
    method_call    go to state 78


State 49

   51 while_loop: T_WHILE . Expression '{' Block '}'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 81
    member_access  go to state 77
    method_call    go to state 78


State 50

   52 do_while_loop: T_DO . '{' Block '}' T_WHILE '(' Expression ')' ';'

    '{'  shift, and go to state 82


State 51

   33 declaration: Type . identifiers ';'

    T_IDENTIFIER  shift, and go to state 83

    identifiers  go to state 84


State 52

   18 method: T_IDENTIFIER '(' parameters ')' T_POINT ReturnType '{' Body . returnStatement '}'

    T_RETURN  shift, and go to state 47

    $default  reduce using rule 37 (returnStatement)

    returnStatement  go to state 85


State 53

   27 Body: declarations . statements returnStatement
   28     | declarations . returnStatement
   31 declarations: declarations . declaration

    T_IDENTIFIER  shift, and go to state 45
    T_PRINT       shift, and go to state 46
    T_RETURN      shift, and go to state 47
    T_IF          shift, and go to state 48
    T_WHILE       shift, and go to state 49
    T_INTEGER     shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_DO          shift, and go to state 50

    T_RETURN  [reduce using rule 37 (returnStatement)]
    $default  reduce using rule 37 (returnStatement)

    Type             go to state 51
    declaration      go to state 86
    returnStatement  go to state 87
    statements       go to state 88
    statement        go to state 57
    assignment       go to state 58
    Method_call      go to state 59
    if_else          go to state 60
    while_loop       go to state 61
    do_while_loop    go to state 62
    print            go to state 63
    method_call      go to state 64


State 54

   32 declarations: declaration .

    $default  reduce using rule 32 (declarations)


State 55

   30 Body: returnStatement .

    $default  reduce using rule 30 (Body)


State 56

   29 Body: statements . returnStatement
   38 statements: statements . statement

    T_IDENTIFIER  shift, and go to state 89
    T_PRINT       shift, and go to state 46
    T_RETURN      shift, and go to state 47
    T_IF          shift, and go to state 48
    T_WHILE       shift, and go to state 49
    T_DO          shift, and go to state 50

    T_RETURN  [reduce using rule 37 (returnStatement)]
    $default  reduce using rule 37 (returnStatement)

    returnStatement  go to state 90
    statement        go to state 91
    assignment       go to state 58
    Method_call      go to state 59
    if_else          go to state 60
    while_loop       go to state 61
    do_while_loop    go to state 62
    print            go to state 63
    method_call      go to state 64


State 57

   39 statements: statement .

    $default  reduce using rule 39 (statements)


State 58

   40 statement: assignment .

    $default  reduce using rule 40 (statement)


State 59

   41 statement: Method_call .

    $default  reduce using rule 41 (statement)


State 60

   42 statement: if_else .

    $default  reduce using rule 42 (statement)


State 61

   43 statement: while_loop .

    $default  reduce using rule 43 (statement)


State 62

   44 statement: do_while_loop .

    $default  reduce using rule 44 (statement)


State 63

   45 statement: print .

    $default  reduce using rule 45 (statement)


State 64

   48 Method_call: method_call . ';'

    ';'  shift, and go to state 92


State 65

   46 assignment: T_IDENTIFIER '=' . Expression ';'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 93
    member_access  go to state 77
    method_call    go to state 78


State 66

   76 method_call: T_IDENTIFIER '(' . Arguments ')'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    $default  reduce using rule 79 (Arguments)

    Expression     go to state 94
    member_access  go to state 77
    method_call    go to state 78
    Arguments      go to state 95
    Arguments_     go to state 96


State 67

   47 assignment: T_IDENTIFIER '.' . T_IDENTIFIER '=' Expression ';'
   77 method_call: T_IDENTIFIER '.' . T_IDENTIFIER '(' Arguments ')'

    T_IDENTIFIER  shift, and go to state 97


State 68

   70 Expression: T_NUMBER .

    $default  reduce using rule 70 (Expression)


State 69

   66 Expression: T_IDENTIFIER .
   75 member_access: T_IDENTIFIER . '.' T_IDENTIFIER
   76 method_call: T_IDENTIFIER . '(' Arguments ')'
   77            | T_IDENTIFIER . '.' T_IDENTIFIER '(' Arguments ')'

    '('  shift, and go to state 66
    '.'  shift, and go to state 98

    $default  reduce using rule 66 (Expression)


State 70

   65 Expression: '-' . Expression

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 99
    member_access  go to state 77
    method_call    go to state 78


State 71

   69 Expression: '(' . Expression ')'

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 100
    member_access  go to state 77
    method_call    go to state 78


State 72

   64 Expression: T_NOT . Expression

    T_NUMBER      shift, and go to state 68
    T_IDENTIFIER  shift, and go to state 69
    '-'           shift, and go to state 70
    '('           shift, and go to state 71
    T_NOT         shift, and go to state 72
    T_NEW         shift, and go to state 73
    T_TRUE        shift, and go to state 74
    T_FALSE       shift, and go to state 75

    Expression     go to state 101
    member_access  go to state 77
    method_call    go to state 78


State 73

   73 Expression: T_NEW . T_IDENTIFIER
   74           | T_NEW . T_IDENTIFIER '(' Arguments ')'

    T_IDENTIFIER  shift, and go to state 102


State 74

   71 Expression: T_TRUE .

    $default  reduce using rule 71 (Expression)


State 75

   72 Expression: T_FALSE .

    $default  reduce using rule 72 (Expression)


State 76

   54 print: T_PRINT Expression . ';'
   55 Expression: Expression . T_PLUS Expression
   56           | Expression . '-' Expression
   57           | Expression . T_MULT Expression
   58           | Expression . T_DIV Expression
   59           | Expression . T_GREATER Expression
   60           | Expression . T_GEQ Expression
   61           | Expression . T_EQUALS Expression
   62           | Expression . T_AND Expression
   63           | Expression . T_OR Expression

    T_GREATER  shift, and go to state 103
    T_GEQ      shift, and go to state 104
    T_EQUALS   shift, and go to state 105
    T_PLUS     shift, and go to state 106
    '-'        shift, and go to state 107
    T_MULT     shift, and go to state 108
    T_DIV      shift, and go to state 109
    T_OR       shift, and go to state 110
    T_AND      shift, and go to state 111
    ';'        shift, and go to state 112


State 77

   67 Expression: member_access .

    $default  reduce using rule 67 (Expression)


State 78

   68 Expression: method_call .

    $default  reduce using rule 68 (Expression)


State 79

   36 returnStatement: T_RETURN Expression . ';'
   55 Expression: Expression . T_PLUS Expression
   56           | Expression . '-' Expression
   57           | Expression . T_MULT Expression
   58           | Expression . T_DIV Expression
   59           | Expression . T_GREATER Expression
   60           | Expression . T_GEQ Expression
   61           | Expression . T_EQUALS Expression
   62           | Expression . T_AND Expression
   63           | Expression . T_OR Expression
